# study_futures

./: Cargo.toml  README.md
examples/: event_loop.rs  lazy_static_var.rs  object_trait.rs  object_trait_vtable.rs  oneshot.rs  thread_local.rs
src/: main.rs
